--- a/mockups/ironRat/products.html
+++ b/mockups/ironRat/products.html
@@ -69,8 +69,134 @@
 
     <div class="container">
 
+        <h1 class="mb-5 mt-5">Services, Products, and Solutions</h1>
 
-        <h2>Our Products</h2>
+        <p>Below you will see some of the services, products and solutions that we offer!</p>
+
+        <h2 class="mb-5 mt-5">Our Services</h2>
+
+        <div class="row">
+
+            <div class="col-md-6">
+
+                <h3 class="mt-3">Chemical\Acid Stripping</h3>
+
+                <p><img src="images/placeholdericon.png" alt="icon" class="img-fluid" /></p>
+
+                    <a class="btn btn-primary btn-lg" data-toggle="collapse" href="#descr1" role="button" aria-expanded="false" aria-controls="descr1">
+                        <h6>More info on product</h6> 
+                    </a>
+
+                    <button type="button" class="btn btn-primary btn-lg" data-toggle="modal" data-target="#myModal"><h6>More pictures</h6></button>
+
+                <div class="collapse" id="descr1">
+                    <div class="card card-body text-dark">
+                        <p>Benco B17 Industrial Coatings Remover is a liquid, non-flammable remover widely used to remove the most durable coatings from steel and aluminum. B17 is the most aggressive formulation developed by Benco Sales for the removal of technologically advanced coatings designed for extreme durability and chemical resistance. Epoxy coatings, powder coatings, electro-coat coatings, polyurethanes, and UV/EB coatings are rapidly removed by submersion in B17. B17 is also effective on recently developed ceramic coatings.</p>
+                        <p>Sandblasting; We use many types of abrasive media to sandblast. All depending on the material being blasted and the level of cleaning required.</p>
+                    </div>
+                </div>
+
+                <div class="modal fade" id="myModal" role="dialog">
+                    <div class="modal-dialog modal-lg">
+                        <div class="modal-content">
+                            <div class="modal-header">
+                                <h4 class="modal-title text-dark">Chemical\Acid Stripping</h4>
+                            </div>
+                            <div class="modal-body">
+                                <div id="demo" class="carousel slide" data-ride="carousel">
+
+                                    <!-- The slideshow -->
+                                    <div class="carousel-inner">
+                                        <div class="carousel-item active">
+                                            <img src="images/placeholdericon2.png" alt="logo" class="img-fluid">
+                                        </div>
+                                        <div class="carousel-item">
+                                            <img src="images/placeholdericon2.png" alt="logo" class="img-fluid">
+                                        </div>
+                                        <div class="carousel-item">
+                                            <img src="images/placeholdericon2.png" alt="logo" class="img-fluid">
+                                        </div>
+                                    </div>
+
+                                    <!-- Left and right controls -->
+                                    <a class="carousel-control-prev" href="#demo" data-slide="prev">
+                                        <span class="carousel-control-prev-icon"></span>
+                                    </a>
+                                    <a class="carousel-control-next" href="#demo" data-slide="next">
+                                        <span class="carousel-control-next-icon"></span>
+                                    </a>
+
+                                </div>
+                            </div>
+                            <div class="modal-footer">
+                                <button type="button" class="btn btn-success" data-dismiss="modal">Close</button>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+
+            <div class="col-md-6">
+
+                <h3 class="mt-3">Cerakote</h3>
+
+                <p><img src="images/placeholdericon.png" alt="icon" class="img-fluid" /></p>
+
+                <a class="btn btn-primary btn-lg" data-toggle="collapse" href="#descr2" role="button" aria-expanded="false" aria-controls="descr2">
+                    <h6>More info on product</h6>
+                </a>
+
+                <button type="button" class="btn btn-primary btn-lg" data-toggle="modal" data-target="#myModal"><h6>More pictures</h6></button>
+
+                <div class="collapse" id="descr2">
+                    <div class="card card-body text-dark">
+                        <p>Cerakote is a ceramic based finish that can be applied to metals, plastics, polymers and wood. The unique formulation used for Cerakote ceramiccoating enhances a number of physical performance properties including abrasion/wear resistance, corrosion resistance, chemical resistance, impact strength, and hardness.</p>
+                        </div>
+                    </div>
+
+                        <div class="modal fade" id="myModal" role="dialog">
+                            <div class="modal-dialog modal-lg">
+                                <div class="modal-content">
+                                    <div class="modal-header">
+                                        <h4 class="modal-title text-dark">Cerakote</h4>
+                                    </div>
+                                    <div class="modal-body">
+                                        <div id="demo" class="carousel slide" data-ride="carousel">
+
+                                            <!-- The slideshow -->
+                                            <div class="carousel-inner">
+                                                <div class="carousel-item active">
+                                                    <img src="images/placeholdericon2.png" alt="logo" class="img-fluid">
+                                                </div>
+                                                <div class="carousel-item">
+                                                    <img src="images/placeholdericon2.png" alt="logo" class="img-fluid">
+                                                </div>
+                                                <div class="carousel-item">
+                                                    <img src="images/placeholdericon2.png" alt="logo" class="img-fluid">
+                                                </div>
+                                            </div>
+
+                                            <!-- Left and right controls -->
+                                            <a class="carousel-control-prev" href="#demo" data-slide="prev">
+                                                <span class="carousel-control-prev-icon"></span>
+                                            </a>
+                                            <a class="carousel-control-next" href="#demo" data-slide="next">
+                                                <span class="carousel-control-next-icon"></span>
+                                            </a>
+
+                                        </div>
+                                    </div>
+                                    <div class="modal-footer">
+                                        <button type="button" class="btn btn-success" data-dismiss="modal">Close</button>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+
+                </div>
+
+        <h2 class="mb-5 mt-5">Our Products</h2>
 
         <hr />
 
@@ -141,112 +267,6 @@
                         <div class="modal-content">
                             <div class="modal-header">
                                 <h4 class="modal-title text-dark">Product 2</h4>
-                            </div>
-                            <div class="modal-body">
-                                <div id="demo" class="carousel slide" data-ride="carousel">
-
-                                    <!-- The slideshow -->
-                                    <div class="carousel-inner">
-                                        <div class="carousel-item active">
-                                            <img src="images/placeholdericon2.png" alt="logo" class="img-fluid">
-                                        </div>
-                                        <div class="carousel-item">
-                                            <img src="images/placeholdericon2.png" alt="logo" class="img-fluid">
-                                        </div>
-                                        <div class="carousel-item">
-                                            <img src="images/placeholdericon2.png" alt="logo" class="img-fluid">
-                                        </div>
-                                    </div>
-
-                                    <!-- Left and right controls -->
-                                    <a class="carousel-control-prev" href="#demo" data-slide="prev">
-                                        <span class="carousel-control-prev-icon"></span>
-                                    </a>
-                                    <a class="carousel-control-next" href="#demo" data-slide="next">
-                                        <span class="carousel-control-next-icon"></span>
-                                    </a>
-
-                                </div>
-                            </div>
-                            <div class="modal-footer">
-                                <button type="button" class="btn btn-success" data-dismiss="modal">Close</button>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-            </div>
-
-        </div>
-
-        <h2 class="mb-5 mt-5">Our Services</h2>
-
-        <div class="row">
-
-            <div class="col-md-6">
-
-                <h3 class="mt-3">Service 1</h3>
-
-                <p><img src="images/placeholdericon.png" alt="icon" class="img-fluid" /></p>
-
-                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed malesuada sodales lacus et lacinia. Donec tellus ipsum, finibus a purus quis, aliquam blandit mauris.</p>
-
-                <button type="button" class="btn btn-primary btn-lg" data-toggle="modal" data-target="#myModal"><h6>More pictures</h6></button>
-
-                <div class="modal fade" id="myModal" role="dialog">
-                    <div class="modal-dialog modal-lg">
-                        <div class="modal-content">
-                            <div class="modal-header">
-                                <h4 class="modal-title text-dark">Service 1</h4>
-                            </div>
-                            <div class="modal-body">
-                                <div id="demo" class="carousel slide" data-ride="carousel">
-
-                                    <!-- The slideshow -->
-                                    <div class="carousel-inner">
-                                        <div class="carousel-item active">
-                                            <img src="images/placeholdericon2.png" alt="logo" class="img-fluid">
-                                        </div>
-                                        <div class="carousel-item">
-                                            <img src="images/placeholdericon2.png" alt="logo" class="img-fluid">
-                                        </div>
-                                        <div class="carousel-item">
-                                            <img src="images/placeholdericon2.png" alt="logo" class="img-fluid">
-                                        </div>
-                                    </div>
-
-                                    <!-- Left and right controls -->
-                                    <a class="carousel-control-prev" href="#demo" data-slide="prev">
-                                        <span class="carousel-control-prev-icon"></span>
-                                    </a>
-                                    <a class="carousel-control-next" href="#demo" data-slide="next">
-                                        <span class="carousel-control-next-icon"></span>
-                                    </a>
-
-                                </div>
-                            </div>
-                            <div class="modal-footer">
-                                <button type="button" class="btn btn-success" data-dismiss="modal">Close</button>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-            </div>
-
-            <div class="col-md-6">
-
-                <h3 class="mt-3">Service 2</h3>
-
-                <p><img src="images/placeholdericon.png" alt="icon" class="img-fluid" /></p>
-
-                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed malesuada sodales lacus et lacinia. Donec tellus ipsum, finibus a purus quis, aliquam blandit mauris.</p>
-
-                <button type="button" class="btn btn-primary btn-lg" data-toggle="modal" data-target="#myModal"><h6>More pictures</h6></button>
-
-                <div class="modal fade" id="myModal" role="dialog">
-                    <div class="modal-dialog modal-lg">
-                        <div class="modal-content">
-                            <div class="modal-header">
-                                <h4 class="modal-title text-dark">Service 1</h4>
                             </div>
                             <div class="modal-body">
                                 <div id="demo" class="carousel slide" data-ride="carousel">
