--- a/template.html
+++ b/template.html
@@ -1,6 +1,10 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
+    <meta
+      name="google-site-verification"
+      content="5HNYWJ_v73tV7-BANJ0juSa3YETTS8aSYAdDFKhnxls"
+    />
     <meta charset="UTF-8" />
     <meta
       name="viewport"
